--- a/loader.css
+++ b/loader.css
@@ -1,12 +1,15 @@
 html{
   overflow-y: hidden;
 }
+body{
+  margin: 0;
+  padding: 0;
+}
 header{
 
 }
 header nav{
   z-index: 1;
-  /* background-color: rgba(0, 0, 0, .25); */
   width: 8rem;
   height: 100vh;
   position: fixed;
@@ -19,6 +22,7 @@ header nav ul{
   margin-bottom: 2rem;
   display: grid;
   justify-content: space-around;
+  list-style-type: none;
 }
 header nav ul li{
   margin: 0.4rem;
@@ -49,20 +53,20 @@ footer{
 .loader-wrapper {
   z-index: 2;
   position: fixed;
-    margin: 0;
-    top: 0;
-    left: 0;
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #FFF;
-    background: rgba(54, 98, 221, 1);
-    background: radial-gradient(circle, rgba(54, 153, 221, 1) 0%, #3662dd 100%); 
+  margin: 0;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #FFF;
+  background: rgba(54, 98, 221, 1);
+  background: radial-gradient(circle, rgba(54, 153, 221, 1) 0%, #3662dd 100%); 
   }
   
-  svg {
+.loader-wrapper  svg {
     width: 5rem;
     height: auto;
     background-color: transparent;
